changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

server/plugins.c: Fix possible buffer overflow when initializing plugins.
Andreas Kirschbaum 2009-02-03

doc/Developers/smooth.pdf, doc/Developers/img/sgrass.base.111.eps,
  doc/Developers/img/smoothlevel.eps, doc/Developers/img/canvas_smooth.eps,
  doc/Developers/smooth.tex: smooth.pdf was broken (due to someone using
  svn:eol-style on it [as far as I can tell], pdf are binary files and shouldn't
  be mangled like that!). Also the pdf couldn't be re-generated from smooth.tex
  since some of the image files were missing. (They were erroneously removed in
  revision 3560). Add the three *.eps needed back. Then regenerate the pdf.
  Also some cosmetic changes to the file.
Arvid Norlander 2009-02-03

doc/Developers/sound, doc/Developers/*.dox, doc/Developers/types/*.dox,
  doc/Developers/fields/*.dox: Set svn:eol-style to native. Correct a few files
  that were stored with CRLF.
Arvid Norlander 2009-02-03

include/define.h, include/libproto.h, common/item.c, common/readable.c,
  common/loader.l: Make safe_strcat() (defined in include/define.h for some
  odd reason) use size_t instead of int for buffer size, since this includes
  changing a pointer to int into a pointer to size_t update all calls to
  safe_strcat() to use size_t for that.
Arvid Norlander 2009-02-02

common/object.c, include/config.h: Document the different levels of MEMORY_DEBUG
  and add a third level that calls free() instead of adding back to free list
  in order to more properly detect use after free.
Arvid Norlander 2009-02-01

common/object.c, include/config.h: Workaround to make MEMORY_DEBUG usable,